--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -39,13 +39,13 @@ jobs:
         pyinstaller --clean --noconfirm lumashot.spec
 
     - name: Set version environment variable
-      run: echo "VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      run: echo "VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
 
     - name: Build installer with Inno Setup
       uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
       with:
         path: packaging/windows/lumashot.iss
-        options: /O+
+        options: /O+ /DVERSION=${{ env.VERSION }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
