--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -38,25 +38,30 @@ jobs:
         cd packaging/windows
         pyinstaller --clean --noconfirm lumashot.spec
 
-    - name: Set version environment variable
-      run: echo "VERSION=${GITHUB_REF_NAME}" >> $GITHUB_ENV
+    - name: Update version in Inno Setup script
+      run: |
+        $version = "${{ github.ref_name }}"
+        $content = Get-Content -Path packaging/windows/lumashot.iss -Raw
+        $newContent = $content -replace '#define MyAppVersion GetEnv\(''VERSION''\)', "#define MyAppVersion `"$version`""
+        $newContent | Set-Content -Path packaging/windows/lumashot.iss
+      shell: pwsh
 
     - name: Build installer with Inno Setup
       uses: Minionguyjpro/Inno-Setup-Action@v1.2.2
       with:
         path: packaging/windows/lumashot.iss
-        options: /O+ /DVERSION=${{ env.VERSION }}
+        options: /O+
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
         name: Windows-Installer
-        path: 'Output/LumaShot-Setup-${{ env.VERSION }}.exe'
+        path: 'Output/LumaShot-Setup-${{ github.ref_name }}.exe'
 
     - name: Create GitHub Release
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        files: Output/LumaShot-Setup-${{ env.VERSION }}.exe
+        files: Output/LumaShot-Setup-${{ github.ref_name }}.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
