--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -56,12 +56,14 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Windows-Installer
-        path: 'Output/LumaShot-Setup-${{ github.ref_name }}.exe'
+        path: D:\a\lumashot\lumashot\packaging\windows\Output\LumaShot-Setup-*.exe
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Create GitHub Release
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        files: Output/LumaShot-Setup-${{ github.ref_name }}.exe
+        files: LumaShot-Setup-${{ github.ref_name }}.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
