--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: Windows-Installer
+        name: LumaShot-Setup-${{ github.ref_name }}.exe
         path: D:\a\lumashot\lumashot\packaging\windows\Output\LumaShot-Setup-*.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -64,6 +64,6 @@ jobs:
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
-        files: LumaShot-Setup-${{ github.ref_name }}.exe
+        files: D:\a\lumashot\lumashot\packaging\windows\Output\LumaShot-Setup-${{ github.ref_name }}.exe
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
